--- a/vdoing/styles/index.styl
+++ b/vdoing/styles/index.styl
@@ -60,7 +60,7 @@ a,input,button
   padding-top $navbarHeight
   padding-bottom .9rem
   .theme-vdoing-wrapper
-    margin 0 auto
+    // margin 0 auto
 
 // 默认的搜索框样式重置
 body .search-box
@@ -119,7 +119,7 @@ body .search-box
   box-sizing border-box
   border-right 1px solid var(--borderColor)
   overflow-y auto
-  transform translateX(-100%)
+  // transform translateX(-100%)
   transition transform .2s
   @media (max-width: $MQMobile)
     background-color var(--mainBg)
