--- a/vdoing/styles/mobile.styl
+++ b/vdoing/styles/mobile.styl
@@ -25,7 +25,7 @@ $mobileSidebarWidth = $sidebarWidth * 0.9
     top 0
     height 100vh
     padding-top $navbarHeight
-    transform translateX(-100%)
+    // transform translateX(-100%)
     transition transform .2s ease
   .page
     padding-left 0
