--- a/vdoing/styles/wrapper.styl
+++ b/vdoing/styles/wrapper.styl
@@ -1,6 +1,6 @@
 $vdoing-wrapper
   max-width $contentWidth
-  margin 0 auto
+  // margin 0 auto
   padding 1rem 2.5rem 2rem 2.5rem
   &:not(.footer)
     background var(--mainBg)
