--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -70,3 +70,13 @@ body .vuepress-plugin-demo-block__wrapper
   .highlight
     color: $accentColor
     font-weight: bold
+
+  @font-face {
+      font-family: "zkgd";
+      font-weight: 400;
+      // src: url("//at.alicdn.com/wf/webfont/WXMMpQiwKRYQ/FZEkorIAjWkcYFldOz0Yy.woff2") format("woff2"),
+      // url("//at.alicdn.com/wf/webfont/WXMMpQiwKRYQ/fEd6hv_ZaimHS4ZrqYcR2.woff") format("woff");
+      src: url("/font/zkgd.woff2") format("woff2"),
+      url("/font/zkgd.woff") format("woff");
+      font-display: swap;
+  }
